2009-10-02  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Gustavo Noronha.

        [GTK] missing support for anamorphic PAR video size
        https://bugs.webkit.org/show_bug.cgi?id=29717

        cleanup of caps handling in the video sink

        * platform/graphics/gtk/VideoSinkGStreamer.cpp:
        (webkit_video_sink_set_caps):

2009-10-02  Prasanth Ullattil  <prasanth.ullattil@nokia.com>

        Reviewed by Simon Hausmann.

        Fix compiler warnings about unused function arguments.

        * bridge/qt/qt_class.h:
        * bridge/qt/qt_runtime.cpp:
        (JSC::Bindings::QtRuntimeMetaMethod::call):
        (JSC::Bindings::QtRuntimeConnectionMethod::call):
        * dom/XMLTokenizerQt.cpp:
        (WebCore::XMLTokenizer::initializeParserContext):
        * platform/graphics/qt/FontCacheQt.cpp:
        (WebCore::FontCache::getTraitsInFamily):
        (WebCore::FontCache::getCachedFontPlatformData):
        * platform/graphics/qt/FontFallbackListQt.cpp:
        (WebCore::FontFallbackList::setPlatformFont):
        * platform/graphics/qt/FontQt.cpp:
        (WebCore::Font::offsetForPositionForComplexText):
        * platform/graphics/qt/GraphicsContextQt.cpp:
        (WebCore::GraphicsContext::drawLineForText):
        (WebCore::GraphicsContext::drawLineForMisspellingOrBadGrammar):
        (WebCore::GraphicsContext::setPlatformShadow):
        (WebCore::GraphicsContext::setURLForRect):
        * platform/graphics/qt/IconQt.cpp:
        (WebCore::Icon::createIconForFiles):
        * platform/graphics/qt/ImageBufferQt.cpp:
        (WebCore::ImageBuffer::ImageBuffer):
        * platform/graphics/qt/ImageDecoderQt.cpp:
        (WebCore::ImageDecoderQt::frameBufferAtIndex):
        * platform/graphics/qt/MediaPlayerPrivatePhonon.cpp:
        (WebCore::MediaPlayerPrivate::supportsType):
        (WebCore::MediaPlayerPrivate::setEndTime):
        * platform/graphics/qt/SimpleFontDataQt.cpp:
        (WebCore::SimpleFontData::containsCharacters):